--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -10,7 +10,14 @@
 
     <input type="text" id="searchedDrink">
 
-    <button ng-click="searchDrink()"> Search </button>  
+    <button ng-click="searchDrink()"> Search </button> 
+
+    <input type="text" id="rateDrink">
+
+    <input type="number" id="rateScore">
+
+    <button ng-click="rate()"> Rate </button> 
+
     <!-- Need to prompt for amount as well -->
 
     <!-- Search for drink, see ingredients -->
