--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -10,7 +10,23 @@
 
     <input type="text" id="searchedAlcohol">
 
-    <button ng-click="searchAlcohol()"> Search </button>  
+    <button ng-click="searchAlcohol()"> Search </button> 
+
+    <input type="text" id="addedAlcohol">
+
+    <input type="number" id="addedAAmmount">
+
+    <button ng-click="addAlcohol()"> Add Booze </button> 
+
+    <input type="text" id="addedMixer">
+
+    <input type="number" id="addedMAmmount">
+
+    <button ng-click="addMixer()"> Add NAB </button> 
+
+    <input type="text" id="removedAlcohol">
+
+    <button ng-click="removeAlcohol()"> Remove </button> 
     <!-- Need to prompt for amount as well -->
 
   </ion-content>
