--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -18,6 +18,16 @@
 
     <button ng-click="rate()"> Rate </button> 
 
+    <input type="text" id="favDrink">
+
+    <button ng-click="faveDrink()"> Favorite </button> 
+
+    <input type="text" id="unfavDrink">
+
+    <button ng-click="unfaveDrink()"> Unfavorite </button> 
+
+    <button ng-click="allFavDrink()"> Show Favorites </button>
+
     <!-- Need to prompt for amount as well -->
 
     <!-- Search for drink, see ingredients -->
