added view all and some "formatting"

--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -26,7 +26,13 @@
 
     <button ng-click="unfaveDrink()"> Unfavorite </button> 
 
+    <br>
+
     <button ng-click="allFavDrink()"> Show Favorites </button>
+
+    <br>
+
+    <button ng-click="allDrink()"> Show All </button>
 
     <!-- Need to prompt for amount as well -->
 
