--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -1,3 +1,29 @@
+<head>
+  <style>
+    button {
+      background-color: #DB7705;
+      color: white;
+      font-weight: bold;
+    }
+    input {
+      border-style: solid;
+      border-width: 2px;
+      border-color: black;
+    }
+    ion-tabs {
+      background-color: #1a66ff;
+      color: white;
+    }
+    ion-footer-bar {
+      background-color: #1a66ff;
+    }
+    h3 {
+      text-align: center;
+      color: white;
+    }
+  </style>
+</head>
+
 <ion-view title="Tabs Controller" id="page1">
   <ion-tabs class="tabs-stable tabs-icon-top" id="tabsController-tabs1">
     <ion-tab title="Stock" icon="ion-ios-home" href="#/page1/page2" id="tabsController-tab1">
