--- a/www/templates/reccomenedations.html
+++ b/www/templates/reccomenedations.html
@@ -1,3 +1,29 @@
+<head>
+  <style>
+    button {
+      background-color: #DB7705;
+      color: white;
+      font-weight: bold;
+    }
+    input {
+      border-style: solid;
+      border-width: 2px;
+      border-color: black;
+    }
+    ion-tabs {
+      background-color: #1a66ff;
+      color: white;
+    }
+    ion-footer-bar {
+      background-color: #1a66ff;
+    }
+    h3 {
+      text-align: center;
+      color: white;
+    }
+  </style>
+</head>
+
 <ion-view title="Reccomenedations" id="page4">
   <ion-content padding="true" class="has-header">
     <div id="reccomenedations-markdown1">
