--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -24,6 +24,9 @@
     .amount_label {
       width: 50px;
     }
+    span {
+      color: black;
+    }
   </style>
 </head>
 
@@ -62,7 +65,6 @@
     <input type="text" id="removedAlcohol">
 
     <button ng-click="removeAlcohol()"> Remove </button>
-    <!-- Need to prompt for amount as well -->
 
   </ion-content>
 </ion-view>
