--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -1,33 +1,5 @@
 <head>
-  <style>
-    button {
-      background-color: #DB7705;
-      color: white;
-      font-weight: bold;
-    }
-    input {
-      border-style: solid;
-      border-width: 2px;
-      border-color: black;
-    }
-    ion-tabs {
-      background-color: #1a66ff;
-      color: white;
-    }
-    ion-footer-bar {
-      background-color: #1a66ff;
-    }
-    h3 {
-      text-align: center;
-      color: white;
-    }
-    .amount_label {
-      width: 50px;
-    }
-    span {
-      color: black;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/standard.css">
 </head>
 
 <ion-view title="Stock" id="page2">
