--- a/www/templates/reccomenedations.html
+++ b/www/templates/reccomenedations.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../css/standard.css">
 </head>
 
-<ion-view title="Reccomenedations" id="page4">
+<ion-view title="BuzzedFeed" id="page4">
   <ion-content padding="true" class="has-header">
     <div id="reccomenedations-markdown1">
       <p style="color:#000000;">THIS DOES NOTHING YET</p>
