--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../css/standard.css">
 </head>
 
-<ion-view title="Stock" id="page2">
+<ion-view title="BuzzedFeed" id="page2">
   <ion-content padding="true" class="has-header">
     <ul style="list-style-type:disc">
     	<li ng-repeat="drink in stock">
