--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,6 +12,8 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 40px;"></div>
+      <button ng-click="login()" id="login-button4" class="button button-stable  button-block">Log in</button>
+      <a href="#/page6" id="login-button5" class="button button-positive  button-block button-clear">Or create an account</a>
     </form>
   </ion-content>
 </ion-view>
