--- a/www/templates/registerSurvey.html
+++ b/www/templates/registerSurvey.html
@@ -1,5 +1,16 @@
+<script src="js/md5.min.js"></script>
 <ion-view title="Register Survey" id="page4">
   <ion-content padding="true" class="has-header">
+  <ion-list id="login-list2">
+        <label class="item item-input" id="user">
+          <span class="input-label">Username</span>
+          <input type="text" placeholder="">
+        </label>
+        <label class="item item-input" id="pass">
+          <span class="input-label">Password</span>
+          <input type="password" placeholder="">
+        </label>
+      </ion-list>
     <form id="registerSurvey-form7" class="list">
       <label class="item item-input" id="registerSurvey-textarea1">
         <span class="input-label">Whiskey</span><textarea placeholder=""></textarea></label>
