registration finished by the Great and Powerful Wizard of Oz

--- a/www/templates/registerSurvey.html
+++ b/www/templates/registerSurvey.html
@@ -2,11 +2,11 @@
 <ion-view title="Register Survey" id="page4">
   <ion-content padding="true" class="has-header">
   <ion-list id="login-list2">
-        <label class="item item-input" id="user">
+        <label class="item item-input" id="userrr">
           <span class="input-label">Username</span>
           <input type="text" placeholder="">
         </label>
-        <label class="item item-input" id="pass">
+        <label class="item item-input" id="passss">
           <span class="input-label">Password</span>
           <input type="password" placeholder="">
         </label>
@@ -37,7 +37,7 @@
       <ion-item class="range range-positive" id="registerSurvey-range7">Rating
         <input type="range" value="3" min="1" max="5" step="1">
       </ion-item>
-      <button id="registerSurvey-button6" class="button button-positive  button-block">Submit</button>
+      <button ng-click="register()" id="registerSurvey-button6" class="button button-positive  button-block">Submit</button>
     </form>
   </ion-content>
 </ion-view>
