--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -7,7 +7,7 @@
 
     <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
-      <input type="search" placeholder="Search" id="searchedDrink">
+      <input type="search" placeholder="Drink Search" id="searchedDrink">
     </label>
 
     <button ng-click="searchDrink()" class="button button-block"> Search </button>
