--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -65,11 +65,13 @@
       </ul>
     </div>
 
-    <ul>
-      <li ng-repeat="displayed_drink in drink_list">
-        <span>{{displayed_drink}}</span>
-      <li>
-    </ul>
+    <div id="displayed_drinks">
+      <ul>
+        <li ng-repeat="displayed_drink in drink_list">
+          <span>{{displayed_drink}}</span>
+        <li>
+      </ul>
+    </div>
 
   </ion-content>
 </ion-view>
