--- a/www/templates/reccomenedations.html
+++ b/www/templates/reccomenedations.html
@@ -5,7 +5,7 @@
 <ion-view title="BuzzedFeed" id="page4">
   <ion-content padding="true" class="has-header">
     <div id="recommendations_label">
-      <button class="button button-block button-calm" ng-click="give_recommendations()">Recommend Me a Drink!</button>
+      <button class="button button-block button-calm" ng-click="give_recommendations()">Recommend Me Drinks!</button>
     </div>
 
     <div id="recommendations_block">
