--- a/www/templates/registerSurvey.html
+++ b/www/templates/registerSurvey.html
@@ -2,13 +2,13 @@
 <ion-view title="Register Survey" id="page4">
   <ion-content padding="true" class="has-header">
   <ion-list id="login-list2">
-        <label class="item item-input" id="userrr">
+        <label class="item item-input">
           <span class="input-label">Username</span>
-          <input type="text" placeholder="">
+          <input type="text" placeholder="" id="userrr">
         </label>
-        <label class="item item-input" id="passss">
+        <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="">
+          <input type="password" placeholder="" id="passss">
         </label>
       </ion-list>
     <form id="registerSurvey-form7" class="list">
