--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -36,7 +36,7 @@
       <button ng-click="setIngredient()" class="button"> Set </button>
       <br>
       <br>
-      <button ng-click="removeIngredient()" class="button button-assertive"> Finished! </button>
+      <button ng-click="removeIngredient()" class="button button-assertive"> Empty! </button>
     </div>
 
     <div id="my_stock" style="display:none">
