--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -3,7 +3,7 @@
 </head>
 
 <ion-view title="Tabs Controller" id="page1">
-  <ion-tabs tabs-style="tabs-icon-top" class="tabs-stable tabs-icon-top tabs-royal" id="tabsController-tabs1">
+  <ion-tabs tabs-style="tabs-icon-top" class="tabs-stable tabs-icon-top tabs-energized" id="tabsController-tabs1">
     <ion-tab title="Stock" icon="ion-ios-home" href="#/page1/page2" id="tabsController-tab1">
       <ion-nav-view name="tab1"></ion-nav-view>
     </ion-tab>
